Code review revisions: - Update all "critical" terms to use "promo-blocking" - Removed commented code/debug classes/unreachable CSS - Fix bug where aliases were not being set to promo-blocking on page load - Add additional context in comments - Fix bug where filter would show extra aliases when filtering by promo-blocking only. - Revised JS code to be more readable

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -33,7 +33,3 @@
 @import "pages/settings";
 @import "partials/landing/a";
 @import "partials/premium-promo";
-
-.debug {
-    border: 1px solid red;
-}
